# gym-prime-app

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 20260501_1536_add_data_integrity_constraints.py  20260503_1300_create_app_settings.py  20260507_1200_add_product_category.py  cb80b1bd37f2_create_domain_tables.py  fb5f65465921_initial.py
backend/app/: seed.py
backend/app/core/: auth.py  config.py  database.py  security.py
backend/app/models/: __init__.py  app_setting.py  audit_log.py  inventory.py  order.py  order_item.py  product.py  product_variant.py  user.py
backend/app/routers/: admin_analytics.py  admin_customers.py  admin_settings.py  audit.py  auth.py  cart.py  inventory.py  orders.py  products.py  public_settings.py  totem.py  uploads.py
backend/app/schemas/: admin_analytics.py  admin_customers.py  admin_settings.py  audit.py  auth.py  cart.py  inventory.py  order.py  product.py
backend/app/services/: admin_analytics.py  admin_customers.py  app_settings.py  audit.py  bucket.py  cart.py  order_status.py  orders.py  whatsapp.py
backend/tests/: conftest.py  test_admin_analytics.py  test_admin_customers.py  test_admin_permissions.py  test_admin_settings.py  test_audit.py  test_auth.py  test_health.py  test_orders.py  test_products.py  test_seed.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
src/: App.jsx  index.css
(+19 files in other folders)
