[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.1",
    "minio>=7.2.20",
    "psycopg[binary]>=3.2.13",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
